--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.1.4",
     "axios": "^1.2.2",
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
@@ -15,6 +16,8 @@
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "rxjs": "^7.8.0",
+    "styletron-engine-atomic": "^1.5.0",
+    "styletron-react": "^6.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
