--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^5.1.4",
     "axios": "^1.2.2",
     "classnames": "^2.3.2",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
