--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "rxjs": "^7.8.0",
     "styletron-engine-atomic": "^1.5.0",
     "styletron-react": "^6.1.0",
