finalizando tela de login e criando guard de authenticação

--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-reactive-form": "^2.0.1",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.1",
     "rxjs": "^7.8.0",
     "styletron-engine-atomic": "^1.5.0",
     "styletron-react": "^6.1.0",
