correcao do modal de visualizxacao do ator

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "noFallthroughCasesInSwitch": true,
     "module": "esnext",
     "noImplicitAny": false,
+    "strictNullChecks": false,
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
